--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
 }
 .card{
-    height: 50vw;
+    height: 90vh;
     background-size: cover;
     background-position: center; ;
     border-radius: 5vw;
