--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     background-size: cover;
     background-position: center; ;
     border-radius: 5vw;
-    flex: 0.05;
+    flex: 0.07;
     transition: flex 0.5s ease-out;
 }
 .active{
@@ -27,11 +27,12 @@
     color: rgb(255, 255, 255);
     padding-left: 5%;
     transition: opacity 1s ease-in-out;
-    text-shadow: aqua 1px 1px 1px 0.1s;
+    text-shadow: aqua 1px 1px 1px;
+    font-size: 50px;
 }
 
 
 h3{
     opacity: 0;
-    font-size: larger;
+
 }
